style.css
@import url(./resets.css);

header {
    padding: 30px 40px;
    background-color: #0891b2;
    position: relative;
    overflow: visible;
}

.clipped-box {
    position: absolute;
    height: 75%;
    width: 100%;
    bottom: -10px;
    left: 0;
    background-color: #fff;
    clip-path: polygon(0 20%, 100% 0, 100% 100%, 0% 100%);
}

.profile-img {
    background-image: url(./životopis-fotka-originál.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center 30%;
    height: 300px;
    width: 200px;
    margin: 0 auto;
    margin-bottom: 20px;
    position: relative;
    color: #fff;
    max-width: 300px;
}

.profile-img > h3 {
    position: absolute;
    left: 6px;
    bottom: 0;
    width: 100%;
    font-size: 2.4rem;
    text-shadow: 1px 1px 6px #000;
}

.about {
    position: relative;
    max-width: 800px;
}

.about h2 {
    margin-bottom: 10px;
    text-align: center;
}

.about p {
    margin-bottom: 10px;
    font-size: 1.2rem;
}

.links {
    font-size: 2rem;
}

.about .links {
    text-align: center;
}

main {
    padding: 20px 40px;
    display: flex;
    flex-direction: column;
    gap: 8px;
    align-items: center;
}

main > h1 {
    margin-bottom: 8px;
}

.projects {
    margin-bottom: 30px;
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
    justify-content: center;
    gap: 30px;
}

.projects-text {
    max-width: 80ch;
    margin-bottom: 12px;
}

.project {
    border: 1px solid grey;
    transition: scale 300ms ease-in-out;
    display: flex;
    flex-direction: column;
    padding-bottom: 10px;
}

.project:hover {
    scale: 1.02;
}

.project:not(:last-child) {
    margin-bottom: 16px;
}

.project-header {
    display: flex;
    justify-content: space-between;
    padding: 10px 10px 0;
}

.project img {
    width: 100%;
}

.project-title {
    font-size: 1.4rem;
}

.project-links {
    font-size: 1.4rem;
}

.project-links :first-child {
    margin-right: 4px;
}

.project-description {
    color: grey;
    padding: 10px;
}

.tags {
    margin-top: 6px;
    display: flex;
    column-gap: 10px;
    row-gap: 5px;
    flex-wrap: wrap;
    padding: 0 10px;
    margin-top: auto;
}

.tag {
    padding: 6px 12px;
    background-color: lightgrey;
    border-radius: 100px;
    border: 1px solid;
}

footer {
    font-size: 1.2rem;
    background-color: #0891b2;
    color: #fff;
    padding-top: 20px;
}

.contact,
.contact-container {
    display: flex;
    flex-direction: column;
    gap: 8px;
}

.contact-container {
    padding: 0 40px;
}

.contact {
    gap: 4px;
}

.contact-title,
footer .links {
    align-self: center;
}

.contact-title {
    font-size: 2rem;
}

.contact-img {
    width: 100%;
    max-width: 400px;
}

@media (min-width: 450px) {
    header {
        padding-top: 100px;
    }
    .profile-img {
        float: left;
        margin: -60px 20px 0px -10px;
        z-index: 1;
    }

    .profile-img > h3 {
        top: 10px;
        bottom: initial;
        left: 80%;
        width: 120%;
    }

    .about {
        box-shadow: 1px 1px 6px grey;
        padding: 50px 20px 20px;
        background-color: #fff;
    }

    .about .links {
        text-align: right;
    }
}

@media (min-width: 600px) {
    footer {
        display: flex;
        padding: 20px 40px;
        align-items: center;
        justify-content: center;
    }

    .contact-img {
        width: 0;
        flex: 1;
        flex-basis: 400px;
    }

    .contact-title {
        margin-bottom: 20px;
    }
}

@media (min-width: 650px) {
    header {
        display: flex;
        align-items: center;
        justify-content: center;
    }
    .profile-img {
        float: none;
        margin: 0;
        flex-grow: 1;
        flex-shrink: 0;
    }
    .profile-img > h3 {
        bottom: 0;
        top: initial;
        left: 10px;
        width: 100%;
    }
}

